# ceddl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CEDDLConfig.cmake.in
src/: Dockerfile  ceddl.c  ceddl.h  makefile.ansi
